--- a/og-image-template.html
+++ b/og-image-template.html
@@ -28,7 +28,7 @@
 
         .container {
             text-align: center;
-            padding: 60px;
+            padding: 150px 150px;  /* WhatsApp-safe zones: 150px on all sides */
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -42,13 +42,13 @@
         }
 
         .logo {
-            width: 120px;
-            height: 120px;
+            width: 100px;
+            height: 100px;
             border-radius: 16px;
         }
 
         h1 {
-            font-size: 140px;
+            font-size: 110px;
             font-weight: 700;
             color: #000000;
             letter-spacing: -0.04em;
@@ -56,7 +56,7 @@
         }
 
         p {
-            font-size: 48px;
+            font-size: 44px;
             font-weight: 500;
             color: rgba(0, 0, 0, 0.65);
             letter-spacing: -0.01em;
