--- a/og-image-template.html
+++ b/og-image-template.html
@@ -82,7 +82,7 @@
             <img src="frontend/public/lovable-uploads/df98b257-f966-4a4c-95ec-38a40d83c40a.png" alt="MindMirror Logo" class="logo">
             <h1>MindMirror</h1>
         </div>
-        <p>Persistent memory for AI models</p>
+        <p>Long-term memory for AI models</p>
     </div>
 </body>
 </html>
