--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="/lovable-uploads/df98b257-f966-4a4c-95ec-38a40d83c40a.png" />
     <meta property="og:url" content="https://usemindmirror.com/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MindMirror - Persistent Memory for AI Models</title>
+    <title>MindMirror - Long-Term Memory for AI Models</title>
     <meta name="description" content="mindmirror(1) — persistent Claude memory for obsessive developers" />
     <meta name="author" content="Artem" />
 
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="MindMirror - Persistent Memory for AI Models" />
+    <meta property="og:title" content="MindMirror - Long-Term Memory for AI Models" />
     <meta property="og:description" content="Persistent memory for Claude, Windsurf, Cursor and custom AI models" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://usemindmirror.com/og-image.png" />
